# rt

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  README.md  Rtpp_benchmark.sh  commands.md  dummy_example.sh  github_benchamark_analysis.md  github_benchamark_analysis.txt  ground_truth_trimodel_label.json  implementation.md  install_z3.sh  interesting_pipelines.sh  interesting_pipelines_high_freq_commands.txt  pyproject.toml  requirements.txt  rt.sh  run_evaluations.sh  run_tests.sh  typecheck.sh
.devcontainer/: devcontainer.json  setup-zsh.sh
benchmark_fetcher/: fetch_commit.py  pipeline_commits_summary.json  summary.json
docs/: architecture.md  command-signatures.md
evaluation_pipelines/: 3 copy.sh  debug.sh  debug_1.sh  interesting_pipelines.sh  ladder7_1.sh  test.sh
evaluation_results/: baseline.csv  baseline_labeled.json  evaluation_results.json  evaluation_results_242910.json  merged_results.csv  results_annotated.csv  results_unannotated.csv  summary.csv  timing_table.md
examples/: motivating_example.sh
full_benchmark/: fetch_scripts_by_tag.sh  fetch_so_questions.py  search_so_questions.py  tags.txt
general_logs/: command_pattern.csv  command_pattern.txt  detailed_command_invocations.txt  detailed_command_invocations_supported.csv  pattern_analysis.csv  pattern_analysis.txt
ltsh_config/: typedb
packaging/: Dockerfile  README.md  build-deb.sh  build-docker.sh  build-rpm.sh  build.sh  nfpm.yaml
scripts/: check_functionality.sh  generate-typing-stubs.sh  generate_typing_stubs.py  install.sh  push_snapshot.sh  (+2 more)
(+5428 files in other folders)
