[project]
name = "rt"
version = "0.1.0"
description = "An overlay type system for Unix shell pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jpype1>=1.7.1",
    "pash-annotations>=0.2.4",
    "pyyaml>=6.0.3",
    "platformdirs>=4.10.0",
    "libdash>=0.4.1",
    "shasta @ git+https://github.com/binpash/shasta",
]

[project.scripts]
rt = "rt.main:cli_main"
rti = "rti.main:cli_main"

[build-system]
requires = ["uv_build>=0.8.15"]
build-backend = "uv_build"

[dependency-groups]
dev = ["stubgenj>=0.2.12", "pytest>=9.0.3", "hypothesis>=6.155.7"]
